--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,11 +1,5 @@
 #map {
-  width:  100%px;
-  height: 250px;
-  border: 1px solid black;
-}
-
-#map2 {
-  width:  100%px;
-  height: 1200px;
+  width:  100%;
+  height: 100px;
   border: 1px solid black;
 }
