--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="#">SLU Truck Tracker</a>
+    <a class="navbar-brand" href="/">SLU Truck Tracker</a>
   </div>
 
   <div class="collapse navbar-collapse navbar-ex1-collapse">
@@ -16,25 +16,87 @@
       <li><a href="#">About</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
-      <li><a href="#"><h5><strong>Food Truck Login</strong></h5></a></li>
+      <li><a href="/auth"><h5><strong>Food Truck Login</strong></h5></a></li>
     </ul>
   </div>
 </nav>
 
-<!-- <div class="container">
-    <div id="map" align="right">
-    </div>
-</div> -->
+<div class="container">
+<style>
+  .carousel-inner > .item > img,
+  .carousel-inner > .item > a > img {
+    height: 300px;
+      width: 80%;
+      margin: auto;
+  }
+</style>
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+      <li data-target="#myCarousel" data-slide-to="3"></li>
+    </ol>
 
-<div class="jumbotron">
-  <div class="container">
-  <div id="map" align="right">
+    <div class="carousel-inner" role="listbox">
+
+      <div class="item active">
+        <img src="http://s3-media3.fl.yelpassets.com/bphoto/CCuF1hy1iaLhelSO3P9nmw/o.jpg" alt="CheeseWizards" width="460" height="345">
+        <div class="carousel-caption">
+          <h3>Cheese Wizards</h3>
+          <p>Grilled Cheese!</p>
+        </div>
+      </div>
+
+      <div class="item">
+        <img src="http://s3-media1.fl.yelpassets.com/bphoto/FVNs8LtjBPqr3WkO0v5QGQ/l.jpg" alt="CheeseLogo" width="460" height="345">
+        <div class="carousel-caption">
+          <h3>Cheesy Logo</h3>
+          <p>Awesome!</p>
+        </div>
+      </div>
+
+      <div class="item">
+        <img src="img_flower.jpg" alt="Flower" width="460" height="345">
+        <div class="carousel-caption">
+          <h3>Flowers</h3>
+          <p>Beatiful flowers in Kolymbari, Crete.</p>
+        </div>
+      </div>
+
+      <div class="item">
+        <img src="img_flower2.jpg" alt="Flower" width="460" height="345">
+        <div class="carousel-caption">
+          <h3>Flowers</h3>
+          <p>Beatiful flowers in Kolymbari, Crete.</p>
+        </div>
+      </div>
+
     </div>
-      <a class="btn btn-primary btn-lg">Go to the Map</a>
-    </p>
+
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
   </div>
 </div>
 
+
+
+<div class="well" align="center">
+  <div class="container">
+  <div id="map">
+    </div>
+    <br>
+      <a class="btn btn-success btn-sm" href="/maps">Go to the Map</a>
+  </div>
+</div>
+</div>
 
 
   <script>
