--- a/views/maps/map.ejs
+++ b/views/maps/map.ejs
@@ -1,13 +1,33 @@
-<% include ./partials/header %>
+<% include ../partials/header %>
+<nav class="navbar navbar-default" role="navigation">
+  <div class="navbar-header">
+    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+      <span class="sr-only">Toggle navigation</span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
+    <a class="navbar-brand" href="/">SLU Truck Tracker</a>
+  </div>
+
+  <div class="collapse navbar-collapse navbar-ex1-collapse">
+    <ul class="nav navbar-nav">
+      <li class="active"><a href="#">Trucks</a></li>
+      <li><a href="#">About</a></li>
+    </ul>
+    <ul class="nav navbar-nav navbar-right">
+      <li><a href="#"><h5><strong>Food Truck Login</strong></h5></a></li>
+    </ul>
+  </div>
+</nav>
 
 <div class="container">
-    <h1>My Points</h1>
-    <div id="map2"></div>
-  </div>
+    <div id="map" style="height: 500px"></div>
+</div>
 
   <script>
     var myPoints = <%- JSON.stringify(locations) %>;
     drawMap(myPoints)
   </script>
 
-<% include ./partials/footer %>
+<% include ../partials/footer %>
