--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,5 @@
 <% include ./partials/header %>
+
 <nav class="navbar navbar-default" role="navigation">
   <!-- Brand and toggle get grouped for better mobile display -->
   <div class="navbar-header">
@@ -8,29 +9,28 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="/">SLU Truck Tracker</a>
+    <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+        <a href="/" class="thumbnail">
+          <img src="/images/food-truck-icon.jpg" alt="truck">
+        </a>
+      </div>
+      <h3>SLU Food Truck Finder</h3>
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse navbar-ex1-collapse">
     <ul class="nav navbar-nav">
-      <!-- <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-        <a href="/" class="thumbnail">
-          <img src="../public/images/food-truck-icon.jpg" alt="truck">
-        </a>
-      </div> -->
-      <li><a href="#">Show Trucks</a></li>
+      <!-- <li><a href="/maps">Go To The Map</a></li> -->
     </ul>
     <ul class="nav navbar-nav navbar-right">
-      <li><a href="#">About</a></li>
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Search By Day<b class="caret"></b></a>
         <ul class="dropdown-menu">
-          <li><a href="#">Monday</a></li>
-          <li><a href="#">Tuesday</a></li>
-          <li><a href="#">Wednesday</a></li>
-          <li><a href="#">Thursday</a></li>
-          <li><a href="#">Friday</a></li>
+          <li><a href="/maps/Monday">Monday</a></li>
+          <li><a href="/maps/Tuesday">Tuesday</a></li>
+          <li><a href="/maps/Wednesday">Wednesday</a></li>
+          <li><a href="/maps/Thursday">Thursday</a></li>
+          <li><a href="/maps/Friday">Friday</a></li>
         </ul>
       </li>
     </ul>
@@ -83,6 +83,7 @@
       <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
     </a>
+
   </div>
 </div>
 
