--- a/views/maps/map.ejs
+++ b/views/maps/map.ejs
@@ -9,34 +9,35 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="/">SLU Truck Tracker</a>
+    <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+        <a href="/" class="thumbnail">
+          <img src="/images/food-truck-icon.jpg" alt="truck">
+        </a>
+      </div>
+      <h4>SLU Food Truck Finder</h4>
   </div>
 
-  <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse navbar-ex1-collapse">
-    <ul class="nav navbar-nav">
-      <!-- <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-        <a href="/" class="thumbnail">
-          <img src="../public/images/food-truck-icon.jpg" alt="truck">
-        </a>
-      </div> -->
-      <li><a href="#">Show Trucks</a></li>
-    </ul>
     <ul class="nav navbar-nav navbar-right">
-      <li><a href="#">About</a></li>
-      <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Search By Day<b class="caret"></b></a>
-        <ul class="dropdown-menu">
-          <li><a href="#">Monday</a></li>
-          <li><a href="#">Tuesday</a></li>
-          <li><a href="#">Wednesday</a></li>
-          <li><a href="#">Thursday</a></li>
-          <li><a href="#">Friday</a></li>
-        </ul>
-      </li>
+      <div class="dropdown">
+  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">
+    Search By Day
+    <span class="caret"></span>
+  </button>
+  <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Monday</a></li>
+    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Tuesday</a></li>
+    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Wednesday</a></li>
+    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Thursday</a></li>
+    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Friday</a></li>
+  </ul>
+</div>
     </ul>
-  </div><!-- /.navbar-collapse -->
+  </div>
 </nav>
+
+
+
 
 <div class="container">
     <div id="map" style="height: 500px"></div>
