--- a/views/maps/map.ejs
+++ b/views/maps/map.ejs
@@ -1,51 +1,28 @@
 <% include ../partials/header %>
+<script src='https://api.tiles.mapbox.com/mapbox.js/plugins/leaflet-locatecontrol/v0.24.0/L.Control.Locate.js'></script>
+<link href='https://api.tiles.mapbox.com/mapbox.js/plugins/leaflet-locatecontrol/v0.24.0/L.Control.Locate.css' rel='stylesheet' />
 
-<nav class="navbar navbar-default" role="navigation">
-  <!-- Brand and toggle get grouped for better mobile display -->
-  <div class="navbar-header">
-    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-      <span class="sr-only">Toggle navigation</span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button>
-    <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-        <a href="/" class="thumbnail">
-          <img src="/images/food-truck-icon.jpg" alt="truck">
-        </a>
-      </div>
-      <h4>SLU Food Truck Finder</h4>
-  </div>
+<style>
+.leaflet-control-locate {
+  border:1px solid rgba(0,0,0,0.4);
+  }
+.leaflet-control-locate a {
+  background-color:#fff;
+  background-position:-3px, -2px;
+  }
+.leaflet-control-locate.active a {
+  background-position:-33px -2px;
+  }
+</style>
 
-  <div class="collapse navbar-collapse navbar-ex1-collapse">
-    <ul class="nav navbar-nav navbar-right">
-      <div class="dropdown">
-  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">
-    Search By Day
-    <span class="caret"></span>
-  </button>
-  <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Monday</a></li>
-    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Tuesday</a></li>
-    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Wednesday</a></li>
-    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Thursday</a></li>
-    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Friday</a></li>
-  </ul>
-</div>
-    </ul>
-  </div>
-</nav>
+    <div id="map" style="height: 400px">
 
+    </div>
 
-
-
-<div class="container">
-    <div id="map" style="height: 500px"></div>
-</div>
-
-  <script>
+<script>
     var myPoints = <%- JSON.stringify(locations) %>;
-    drawMap(myPoints)
-  </script>
+    drawMap(myPoints);
+</script>
+
 
 <% include ../partials/footer %>
