--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,15 +4,18 @@
   <meta charset="UTF-8">
   <title>Seattle Foodtruck Scout</title>
   <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
-  <link href="/css/style.css" rel="stylesheet">
-  <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <link href='https://api.tiles.mapbox.com/mapbox.js/v2.1.8/mapbox.css' rel='stylesheet' />
-  <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js">
   <script src='https://api.tiles.mapbox.com/mapbox.js/v2.1.8/mapbox.js'></script>
   <link href='https://api.tiles.mapbox.com/mapbox.js/v2.1.8/mapbox.css' rel='stylesheet' />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-  <script src="/js/data.js"></script>
+  <link href="/css/ratchet.css" rel="stylesheet">
+  <link href="/css/ratchet-theme-ios.css" rel="stylesheet">
+  <script src="/js/ratchet.js"></script>
+  <script src="/js/db.js"></script>
   <script src="/js/map.js"></script>
+  <link href="/css/style.css" rel="stylesheet">
   <style>
     body { margin:0; padding:0; }
     #map { position:absolute; top:0; bottom:0; width:100%; }
