auth changes for heroku

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <% include ./partials/header %>
 
 <header class="bar bar-nav">
-    <h1 class="title">Seattle Food Truck Finder</h1>
+    <h1 class="title"><strong>Seattle Food Truck Finder</strong></h1>
 </header>
 
 <div class="content">
