setting up auth pages, validations

--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -22,12 +22,15 @@
     <label>Password</label>
     <input type="text" placeholder="Enter your password">
   </div>
+  <br>
   <button class="btn btn-primary">Login</button>
   <br>
-  <a href="/auth/signup" data-transition="fade" data-ignore="push">
-  <a href="/auth/signup" class="btn btn-positive">Signup For an Account</a>
-  </a>
+  <br>
+  <a href="/auth/signup" data-transition="fade" data-ignore="push" class="btn btn-positive">Signup For an Account</a>
+  <br>
+  &nbsp
 </form>
+
 
 <nav class="bar bar-tab">
   <a class="tab-item active" href="/" data-ignore="push" data-transition="fade">
