--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,17 +31,13 @@
         <ul class="table-view">
           <li class="table-view-cell">
             <a class="push-right" href="/maps" data-transition="fade" data-ignore="push">
-              <strong>Go To The Map!</strong>
-            </a>
-          </li>
-          <li class="table-view-cell">
-            <a class="push-right" href="/trucks">
-              <strong>Check Out The Trucks</strong>
+              <strong>Go To The Map!
+                     </strong>
             </a>
           </li>
           <li class="table-view-cell">
             <a class="push-right" href="/logins">
-              <strong>Vendors Log-In</strong>
+              <strong>Do You Own a Food Truck? </strong>
             </a>
           </li>
         </ul>
