--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -1,18 +1,18 @@
-<% include ../partials/header %>
+<% include ../partials/header.ejs %>
 <div class="col-md-6">
-    <h1>Apply for a Vendor Account</h1>
+    <h1>New Vendor Sign Up</h1>
     <hr>
     <% include ../partials/alerts.ejs %>
-    <form class="form" method="post" action="/auth/signup">
+    <form class="form" method="post" action="/auth/signup" data-ignore="push">
         <input type="email" class="form-control" placeholder="Enter your e-mail" name="email">
         <br><br>
         <input type="text" class="form-control" placeholder="Enter your name" name="name">
         <br><br>
-        <input type="password" class="form-control" placeholder="Choose a password" name="password">
+        <input type="password" class="form-control" placeholder="Choose a password (Must be 8 characters)" name="password">
         <br><br>
         <input type="password" class="form-control" placeholder="Confirm Password" name="password2">
         <br><br>
-        <input type="submit" value="Complete Sign Up" class="btn btn-primary">
+        <input type="submit" value="Complete Sign Up" class="btn btn-positive">
     </form>
 </div>
 
@@ -25,13 +25,13 @@
     <span class="icon icon-star-filled"></span>
     <span class="tab-label">Map</span>
   </a>
-  <a class="tab-item" href="/logins">
+  <a class="tab-item" href="/logins" data-ignore="push" data-transition="fade">
     <span class="icon icon-refresh"></span>
     <span class="tab-label">Refresh</span>
   </a>
-  <a class="tab-item" href="/logins">
+  <a class="tab-item" href="/logins" data-ignore="push" data-transition="fade">
     <span class="icon icon-bars"></span>
     <span class="tab-label">Vendor Login</span>
   </a>
 </nav>
-<% include ../partials/footer %>
+<% include ../partials/footer.ejs %>
