--- a/views/logins/restricted.ejs
+++ b/views/logins/restricted.ejs
@@ -1,7 +1,26 @@
 
 <% include ../partials/header %>
 
-VENDORS ONLY!!!
+<h1>VENDORS ONLY!!!</h1>
+
+<form class="input-group">
+  <div class="input-row">
+    <label>Truck name</label>
+    <input type="text" placeholder="Enter Truck Name">
+  </div>
+  <div class="input-row">
+    <label>Address</label>
+    <input type="text" placeholder="Enter Nearest Address">
+  </div>
+   <div class="input-row">
+    <label>Day</label>
+    <input type="text" placeholder="Enter Day">
+  </div>
+  <div class="input-row">
+    <label>Hours</label>
+    <input type="text" placeholder="Enter Time">
+  </div>
+</form>
 
 
 <% include ../partials/footer %>
