--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,34 +1,28 @@
-<% include ../partials/header %>
+<% include ../partials/header.ejs %>
 
-<!-- <div>
-    <h1>Log in!</h1>
+<div>
+    <h1 align="center">Account Login</h1>
     <hr>
-    <% include ../partials/alerts.ejs %>
-    <form class="form" method="post" action="/auth/login">
-        <input type="text" class="form-control" placeholder="Enter your e-mail" name="email">
-        <br><br>
-        <input type="password" class="form-control" placeholder="Enter your password" name="password">
-        <br><br>
-        <input type="submit" value="log me in" class="btn btn-primary">
-    </form>
-</div> -->
+</div>
 <form class="input-group">
   <div class="input-row">
     <% include ../partials/alerts.ejs %>
+  <form class="form" method="post" action="/auth/login">
     <label>E-mail</label>
     <input type="email" placeholder="Enter your e-mail">
   </div>
   <div class="input-row">
     <label>Password</label>
-    <input type="text" placeholder="Enter your password">
+    <input type="password" placeholder="Enter your password">
   </div>
-  <br>
   <button class="btn btn-primary">Login</button>
   <br>
-  <br>
+  </form>
+  <hr>
   <a href="/auth/signup" data-transition="fade" data-ignore="push" class="btn btn-positive">Signup For an Account</a>
   <br>
-  &nbsp
+  <hr>
+
 </form>
 
 
@@ -51,4 +45,4 @@
   </a>
 </nav>
 
-<% include ../partials/footer %>
+<% include ../partials/footer.ejs %>
