--- a/views/logins/login.ejs
+++ b/views/logins/login.ejs
@@ -1,7 +1,7 @@
 <% include ../partials/header %>
 
 <div>
-<h1>Vendor Check-In</h1>
+<h1>Welcome Vendors!</h1>
 
 <% include ../partials/alerts.ejs %>
 
