--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,6 +15,7 @@
   <script src="/js/ratchet.js"></script>
   <script src="/js/db.js"></script>
   <script src="/js/map.js"></script>
+  <script src="/js/script.js"></script>
   <link href="/css/style.css" rel="stylesheet">
   <style>
     body { margin:0; padding:0; }
